--- a/partials/municipios/_form.html
+++ b/partials/municipios/_form.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label for="descricao" class="control-label">Descrição:</label>
+    <label for="descricao" class="control-label">Descriçãoss:</label>
     <input type="text" ng-model="municipio.description" class="form-control" id="descricao">
 </div>
 <div class="form-group">
