--- a/partials/municipios/municipio_add.html
+++ b/partials/municipios/municipio_add.html
@@ -1,17 +1,12 @@
 <form ng-submit="addMunicipio()">
     <div class="modal-body" >
         <div class="form-group">
-            <label for="descricao" class="control-label">Descrição:</label>
+            <label for="descricao" class="control-label">Descsrição:</label>
             <input type="text" ng-model="municipio.description" class="form-control" id="descricao">
         </div>
-        <div class="form-group">
-            <label for="estado" class="control-label">Estado:</label>
-            <select class="form-control input-sm" ng-model="municipio.state">
-                <option></option>
-                <option>Ceará</option>
-                <option>Bahia</option>
-                <option>Maranhão</option>
-            </select>
+        <div class="form-group" ng-controller="EstadoController as e_ctrl">
+            <label for="criterio_busca">Estado</label>
+            <select ng-model="ctrl.municipio.estado_id" ng-options="estado.id as estado.description for estado in e_ctrl.estados"></select>
         </div>
         <div class="form-group">
             <label for="pais" class="control-label">País:</label>
