--- a/partials/paises/paises.html
+++ b/partials/paises/paises.html
@@ -1,24 +1,24 @@
 <div class="panel panel-default">
-    <form class="well-lg" ng-submit="ctrl.submit()">
+    <form class="well-lg" ng-submit="ctrl.submit()" name="formPais">
         <h4>Gerenciar Paises</h4>
         <hr>
         <div class="form-group">
             <label class="">Código</label>
-            <input type="text" class="form-control input-sm"  ng-model="ctrl.pais.countrycode">
+            <input type="text" class="form-control input-sm" name="codigo"  ng-model="ctrl.pais.countrycode" required>
         </div>
         <div class="form-group">
             <label class="">Moeda</label>
-            <input type="text" class="form-control input-sm"  ng-model="ctrl.pais.countrycurrency">
+            <input type="text" class="form-control input-sm"  ng-model="ctrl.pais.countrycurrency" required>
         </div>
         <div class="form-group">
             <label >Linguagem</label>
-            <input type="text" class="form-control input-sm" ng-model="ctrl.pais.countrylanguage" >
+            <input type="text" class="form-control input-sm" ng-model="ctrl.pais.countrylanguage" required>
         </div>
         <div class="form-group">
             <label>Nome do Pais</label>
-            <input type="text" class="form-control input-sm" ng-model="ctrl.pais.description">
+            <input type="text" class="form-control input-sm" ng-model="ctrl.pais.description" required>
         </div>
-        <input type="submit"  value="{{!ctrl.pais.id ? 'Add' : 'Update'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
+        <input type="submit"  value="{{!ctrl.pais.id ? 'Salvar' : 'Atualizar'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
         <button type="button" ng-click="ctrl.reset()" class="btn btn-warning btn-sm" ng-disabled="myForm.$pristine">Limpar</button>
     </form>
 </div>
@@ -39,7 +39,7 @@
             <td>{{pais.countrycurrency}}</td>
             <td>{{pais.countrylanguage}}</td>
             <td>
-                <button type="button" ng-click="ctrl.edit(pais.id)" class="btn btn-success custom-width btn-sm">Edit</button>  <button type="button" ng-click="ctrl.remove(pais.id)" class="btn btn-danger btn-sm custom-width">Remove</button>
+                <button type="button" ng-click="ctrl.edit(pais.id)" class="btn btn-success custom-width btn-sm">Eitar</button>  <button type="button" ng-click="ctrl.remove(pais.id)" class="btn btn-danger btn-sm custom-width">Apagar</button>
                 <!--<a class="btn btn-primary btn-sm" ui-sref="viewPais({id:pais._id})">Editar</a>-->
                 <!--<a class="btn btn-danger btn-sm"  ng-click="deletePais(pais)">Excluir</a>-->
             </td>
