--- a/partials/estados/estados.html
+++ b/partials/estados/estados.html
@@ -1,43 +1,69 @@
-<div class="panel panel-default">
-    <form class="well-lg" ng-submit="ctrl.submit()">
-        <h4>Gerenciar Estados</h4>
+<div ng-controller="EstadoController as ctrl">
+    <div class="panel panel-default well-lg">
+        <button type="submit" class="btn btn-success pull-right btn-sm" data-toggle="modal" data-target="#myModal" ng-click="ctrl.reset()" >Novo</button>
+        <h4>Cadastro de Estados</h4>
         <hr>
-        <div class="form-group">
-            <label class="">Código do Estado</label>
-            <input type="text" class="form-control input-sm"  ng-model="ctrl.estado.statecode" required>
-        </div>
-        <div class="form-group" ng-controller="PaisController as p_ctrl">
-            <label for="criterio_busca">País</label>
-            <select required ng-model="ctrl.estado.country_id" ng-options="pais.id as pais.description for pais in p_ctrl.paises"></select>
-        <div class="form-group">
-            <label for="criterio2">Nome do Estado</label>
-            <input required type="text" class="form-control input-sm" ng-model="ctrl.estado.description">
-        </div>
-        <input type="submit"  value="{{!ctrl.estado.id ? 'Salvar' : 'Atualizar'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
-        <button type="button" ng-click="ctrl.reset()" class="btn btn-warning btn-sm" ng-disabled="myForm.$pristine">Limpar</button>
+        <label class=""><b>Busca</b></label>
+        <input type="text" class="form-control input-sm" placeholder="Procure aqui o nome do Estado..." ng-model="searchDescription">
     </div>
-    </form>
-</div>
-<div class="panel panel-default">
-    <table class="table table-striped table-bordered">
-        <tr>
-            <th style="max-width: 5%">#</th>
-            <th>Nome</th>
-            <th>Pais</th>
-            <th>Código</th>
-            <th style="max-width: 10%">Ações</th>
-        </tr>
-        <tr ng-repeat="estado in ctrl.estados">
-            <td>{{estado.id}}</td>
-            <td>{{estado.description}}</td>
-            <td>{{estado.country_id}}</td>
-            <td>{{estado.statecode}}</td>
-            <td>
-                <button type="button" ng-click="ctrl.edit(estado.id)" class="btn btn-success custom-width btn-sm">Editar</button>  <button type="button" ng-click="ctrl.remove(estado.id)" class="btn btn-danger btn-sm custom-width">Apagar</button>
-                <!--<a class="btn btn-primary btn-sm" ui-sref="viewEstado({id:estado._id})">Editar</a>-->
-                <!--<a class="btn btn-danger btn-sm"  ng-click="deleteEstado(estado)">Excluir</a>-->
-            </td>
-        </tr>
+    <div class="panel panel-default">
+        <table class="table table-striped table-bordered">
+            <tr>
+                <th style="max-width: 5%">#</th>
+                <th>Nome</th>
+                <th>Pais</th>
+                <th>Código</th>
+                <th>Região</th>
+                <th style="max-width: 10%">Ações</th>
+            </tr>
+            <tr ng-repeat="estado in ctrl.estados | filter:searchDescription">
+                <td>{{estado.id}}</td>
+                <td>{{estado.description}}</td>
+                <td>{{estado.pais.description}}</td>
+                <td>{{estado.statecode}}</td>
+                <td>{{estado.stateregion}}</td>
+                <td>
+                    <button type="button" ng-click="ctrl.edit(estado.id)" class="btn btn-success custom-width btn-sm" data-toggle="modal" data-target="#myModal">Editar</button>
+                    <button type="button" ng-click="ctrl.remove(estado.id)" class="btn btn-danger btn-sm custom-width">Remover</button>
+                </td>
+            </tr>
 
-    </table>
+        </table>
+    </div>
+
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="padding-top: 70px ">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Novo Estado</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="panel panel-default">
+                        <form class="well-lg" ng-submit="ctrl.submit()">
+                            <div class="form-group">
+                                <label class="">Código</label>
+                                <input type="text" class="form-control input-sm"  ng-model="ctrl.estado.statecode" required>
+                            </div>
+                            <div class="form-group" ng-controller="PaisController as p_ctrl">
+                                <label for="criterio_busca">País</label>
+                                <select ng-model="ctrl.estado.pais.id" ng-options="pais.id as pais.description for pais in p_ctrl.paises" required></select>
+                            </div>
+                            <div class="form-group">
+                                <label for="criterio2">Nome</label>
+                                <input type="text" class="form-control input-sm" ng-model="ctrl.estado.description" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="criterio2">Regiao</label>
+                                <input type="text" class="form-control input-sm" ng-model="ctrl.estado.stateregion" required>
+                            </div>
+                            <input type="submit"  value="{{!ctrl.estado.id ? 'Cadastrar' : 'Atualizar'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
+                            <button type="button" ng-click="ctrl.reset()" class="btn btn-warning btn-sm" ng-disabled="myForm.$pristine">Limpar</button>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </div>
