--- a/partials/municipios/municipios.html
+++ b/partials/municipios/municipios.html
@@ -1,22 +1,10 @@
-<div class="panel panel-default">
-    <form class="well-lg" ng-submit="ctrl.submit()">
-        <h4>Gerenciar Municipios</h4>
-        <hr>
-        <div class="form-group">
-            <label for="stCityCode" class="">Código</label>
-            <input type="text" class="form-control input-sm"  ng-model="ctrl.municipio.stCityCode">
-        </div>
-        <div class="form-group" ng-controller="EstadoController as e_ctrl">
-            <label for="criterio_busca">Estado</label>
-            <select ng-model="ctrl.municipio.estado_id" ng-options="estado.id as estado.description for estado in e_ctrl.estados"></select>
-        </div>
-        <div class="form-group">
-            <label for="criterio2">Nome do Municipio</label>
-            <input type="text" class="form-control input-sm" ng-model="ctrl.municipio.description">
-        </div>
-        <input type="submit"  value="{{!ctrl.municipio.id ? 'Salvar' : 'Atualizar'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
-        <button type="button" ng-click="ctrl.reset()" class="btn btn-warning btn-sm" ng-disabled="myForm.$pristine">Limpar</button>
-    </form>
+<div ng-controller="MunicipioController as ctrl">
+<div class="panel panel-default well-lg">
+    <button type="submit" class="btn btn-success pull-right btn-sm" data-toggle="modal" data-target="#myModal" ng-click="ctrl.reset()" >Novo</button>
+    <h4>Cadastro de Municipios</h4>
+    <hr>
+    <label class=""><b>Busca</b></label>
+    <input type="text" class="form-control input-sm" placeholder="Procure aqui o nome do Municipio..." ng-model="searchDescription">
 </div>
 <div class="panel panel-default">
     <table class="table table-striped table-bordered">
@@ -27,17 +15,53 @@
             <th>Código</th>
             <th style="max-width: 10%">Ações</th>
         </tr>
-        <tr ng-repeat="municipio in ctrl.municipios">
+        <tr ng-repeat="municipio in ctrl.municipios | filter:searchDescription">
             <td>{{municipio.id}}</td>
             <td>{{municipio.description}}</td>
-            <td>{{municipio.estado_id}}</td>
+            <td>{{municipio.estado.id}}</td>
             <td>{{municipio.stCityCode}}</td>
             <td>
-                <button type="button" ng-click="ctrl.edit(municipio.id)" class="btn btn-success custom-width btn-sm">Editar</button>  <button type="button" ng-click="ctrl.remove(municipio.id)" class="btn btn-danger btn-sm custom-width">Apagar</button>
-                <!--<a class="btn btn-primary btn-sm" ui-sref="viewMunicipio({id:municipio._id})">Editar</a>-->
-                <!--<a class="btn btn-danger btn-sm"  ng-click="deleteMunicipio(municipio)">Excluir</a>-->
+                <button type="button" ng-click="ctrl.edit(municipio.id)" class="btn btn-success custom-width btn-sm" data-toggle="modal" data-target="#myModal">Editar</button>
+                <button type="button" ng-click="ctrl.deleteMunicipio(municipio.id)" class="btn btn-danger btn-sm custom-width">Remover</button>
+
             </td>
         </tr>
 
     </table>
+</div>
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="padding-top: 70px ">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Novo Municipio</h4>
+            </div>
+            <div class="modal-body">
+                <div class="panel panel-default">
+                    <form class="well-lg" ng-submit="ctrl.submit()">
+                        <div class="form-group">
+                            <label for="stCityCode" class="">Código</label>
+                            <input type="text" class="form-control input-sm"  ng-model="ctrl.municipio.stCityCode">
+                        </div>
+                        <div class="form-group" ng-controller="EstadoController as e_ctrl">
+                            <label for="criterio_busca">Estado</label>
+                            <select ng-model="ctrl.municipio.estado.id" ng-options="estado.id as estado.description for estado in e_ctrl.estados"></select>
+                        </div>
+                        <div class="form-group">
+                            <label for="criterio2">Nome do Municipio</label>
+                            <input type="text" class="form-control input-sm" ng-model="ctrl.municipio.description">
+                        </div>
+                        <input type="submit"  value="{{!ctrl.municipio.id ? 'Cadastrar' : 'Atualizar'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
+                        <button type="button" ng-click="ctrl.reset()" class="btn btn-warning btn-sm" ng-disabled="myForm.$pristine">Limpar</button>
+                    </form>
+                </div>
+            </div>
+            <!--<div class="modal-footer">-->
+                <!--<button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Fechar</button>-->
+                <!--<button type="button" class="btn btn-primary btn-sm">Salvar Municipio</button>-->
+
+            <!--</div>-->
+        </div>
+    </div>
 </div>
