--- a/partials/paises/paises.html
+++ b/partials/paises/paises.html
@@ -1,49 +1,69 @@
-<div class="panel panel-default">
-    <form class="well-lg" ng-submit="ctrl.submit()" name="formPais">
-        <h4>Gerenciar Paises</h4>
+<div ng-controller="PaisController as ctrl">
+    <div class="panel panel-default well-lg">
+        <button type="submit" class="btn btn-success pull-right btn-sm" data-toggle="modal" data-target="#myModal" ng-click="ctrl.reset()" >Novo</button>
+        <h4>Cadastro de Países</h4>
         <hr>
-        <div class="form-group">
-            <label class="">Código</label>
-            <input type="text" class="form-control input-sm" name="codigo"  ng-model="ctrl.pais.countrycode" required>
-        </div>
-        <div class="form-group">
-            <label class="">Moeda</label>
-            <input type="text" class="form-control input-sm"  ng-model="ctrl.pais.countrycurrency" required>
-        </div>
-        <div class="form-group">
-            <label >Linguagem</label>
-            <input type="text" class="form-control input-sm" ng-model="ctrl.pais.countrylanguage" required>
-        </div>
-        <div class="form-group">
-            <label>Nome do Pais</label>
-            <input type="text" class="form-control input-sm" ng-model="ctrl.pais.description" required>
-        </div>
-        <input type="submit"  value="{{!ctrl.pais.id ? 'Salvar' : 'Atualizar'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
-        <button type="button" ng-click="ctrl.reset()" class="btn btn-warning btn-sm" ng-disabled="myForm.$pristine">Limpar</button>
-    </form>
-</div>
-<div class="panel panel-default">
-    <table class="table table-striped table-bordered">
-        <tr>
-            <th style="max-width: 5%">#</th>
-            <th>Nome</th>
-            <th>Codigo Pais</th>
-            <th>Moeda</th>
-            <th>Linguagem</th>
-            <th style="max-width: 10%">Ações</th>
-        </tr>
-        <tr ng-repeat="pais in ctrl.paises">
-            <td>{{pais.id}}</td>
-            <td>{{pais.description}}</td>
-            <td>{{pais.countrycode}}</td>
-            <td>{{pais.countrycurrency}}</td>
-            <td>{{pais.countrylanguage}}</td>
-            <td>
-                <button type="button" ng-click="ctrl.edit(pais.id)" class="btn btn-success custom-width btn-sm">Eitar</button>  <button type="button" ng-click="ctrl.remove(pais.id)" class="btn btn-danger btn-sm custom-width">Apagar</button>
-                <!--<a class="btn btn-primary btn-sm" ui-sref="viewPais({id:pais._id})">Editar</a>-->
-                <!--<a class="btn btn-danger btn-sm"  ng-click="deletePais(pais)">Excluir</a>-->
-            </td>
-        </tr>
+        <label class=""><b>Busca</b></label>
+        <input type="text" class="form-control input-sm" placeholder="Procure aqui o nome do País..." ng-model="searchDescription">
+    </div>
+    <div class="panel panel-default">
+        <table class="table table-striped table-bordered">
+            <tr>
+                <th style="max-width: 5%">#</th>
+                <th>Nome</th>
+                <th>Codigo Pais</th>
+                <th>Moeda</th>
+                <th>Linguagem</th>
+                <th style="max-width: 10%">Ações</th>
+            </tr>
+            <tr ng-repeat="pais in ctrl.paises | filter:searchDescription">
+                <td>{{pais.id}}</td>
+                <td>{{pais.description}}</td>
+                <td>{{pais.countrycode}}</td>
+                <td>{{pais.countrycurrency}}</td>
+                <td>{{pais.countrylanguage}}</td>
+                <td>
+                    <button type="button" ng-click="ctrl.edit(pais.id)" class="btn btn-success custom-width btn-sm" data-toggle="modal" data-target="#myModal">Editar</button>
+                    <button type="button" ng-click="ctrl.remove(pais.id)" class="btn btn-danger btn-sm custom-width">Apagar</button>
+                </td>
+            </tr>
 
-    </table>
+        </table>
+    </div>
+
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="padding-top: 70px ">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Novo País</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="panel panel-default">
+                        <form class="well-lg" ng-submit="ctrl.submit()">
+                            <div class="form-group">
+                                <label class="">Código</label>
+                                <input type="text" class="form-control input-sm"  ng-model="ctrl.pais.countrycode" required >
+                            </div>
+                            <div class="form-group">
+                                <label class="">Moeda</label>
+                                <input type="text" class="form-control input-sm"  ng-model="ctrl.pais.countrycurrency" required >
+                            </div>
+                            <div class="form-group">
+                                <label >Linguagem</label>
+                                <input type="text" class="form-control input-sm" ng-model="ctrl.pais.countrylanguage" required >
+                            </div>
+                            <div class="form-group">
+                                <label>Nome</label>
+                                <input type="text" class="form-control input-sm" ng-model="ctrl.pais.description" required>
+                            </div>
+                            <input type="submit"  value="{{!ctrl.pais.id ? 'Cadastrar' : 'Atualizar'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
+                            <button type="button" ng-click="ctrl.reset()" class="btn btn-warning btn-sm" ng-disabled="myForm.$pristine">Limpar</button>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </div>
