--- a/partials/estados/estados.html
+++ b/partials/estados/estados.html
@@ -11,7 +11,7 @@
             <tr>
                 <th style="max-width: 5%">#</th>
                 <th>Nome</th>
-                <th>Pais</th>
+                <th>País</th>
                 <th>Código</th>
                 <th>Região</th>
                 <th style="max-width: 10%">Ações</th>
@@ -54,7 +54,7 @@
                                 <input type="text" class="form-control input-sm" ng-model="ctrl.estado.description" required>
                             </div>
                             <div class="form-group">
-                                <label for="criterio2">Regiao</label>
+                                <label for="criterio2">Região</label>
                                 <input type="text" class="form-control input-sm" ng-model="ctrl.estado.stateregion" required>
                             </div>
                             <input type="submit"  value="{{!ctrl.estado.id ? 'Cadastrar' : 'Atualizar'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
