--- a/partials/municipios/municipios.html
+++ b/partials/municipios/municipios.html
@@ -1,7 +1,7 @@
 <div ng-controller="MunicipioController as ctrl">
 <div class="panel panel-default well-lg">
     <button type="submit" class="btn btn-success pull-right btn-sm" data-toggle="modal" data-target="#myModal" ng-click="ctrl.reset()" >Novo</button>
-    <h4>Cadastro de Municipios</h4>
+    <h4>Cadastro do Municípios</h4>
     <hr>
     <label class=""><b>Busca</b></label>
     <input type="text" class="form-control input-sm" placeholder="Procure aqui o nome do Municipio..." ng-model="searchDescription">
