--- a/partials/estados/estados.html
+++ b/partials/estados/estados.html
@@ -1,12 +1,15 @@
 <div ng-controller="EstadoController as ctrl">
     <div class="panel panel-default well-lg">
-        <button type="submit" class="btn btn-success pull-right btn-sm" data-toggle="modal" data-target="#myModal" ng-click="ctrl.reset()" >Novo</button>
-        <h4>Cadastro de Estados</h4>
+        <button type="submit" class="btn btn-success pull-right btn-sm" data-toggle="modal" data-target="#myModal" ng-click="ctrl.reset()" >
+            <span class="glyphicon glyphicon-plus">Novo</span>
+        </button>
+        <h2>Cadastro de Estados</h2>
         <hr>
         <label class=""><b>Busca</b></label>
         <input type="text" class="form-control input-sm" placeholder="Procure aqui o nome do Estado..." ng-model="searchDescription">
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
+        <div class="panel-heading" style="background-color: #2F75B5">Estados</div>
         <table class="table table-striped table-bordered">
             <tr>
                 <th style="max-width: 5%">#</th>
@@ -14,7 +17,7 @@
                 <th>País</th>
                 <th>Código</th>
                 <th>Região</th>
-                <th style="max-width: 10%">Ações</th>
+                <th style="width: 100px;">Ações</th>
             </tr>
             <tr ng-repeat="estado in ctrl.estados | filter:searchDescription">
                 <td>{{estado.id}}</td>
@@ -23,8 +26,12 @@
                 <td>{{estado.statecode}}</td>
                 <td>{{estado.stateregion}}</td>
                 <td>
-                    <button type="button" ng-click="ctrl.edit(estado.id)" class="btn btn-success custom-width btn-sm" data-toggle="modal" data-target="#myModal">Editar</button>
-                    <button type="button" ng-click="ctrl.remove(estado.id)" class="btn btn-danger btn-sm custom-width">Remover</button>
+                    <button type="button" ng-click="ctrl.edit(estado.id)" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">
+                        <span class="glyphicon glyphicon-pencil"></span>
+                    </button>
+                    <button type="button" ng-click="ctrl.remove(estado.id)" class="btn btn-sm btn-danger">
+                        <span class="glyphicon glyphicon-trash"></span>
+                    </button>
                 </td>
             </tr>
 
@@ -42,20 +49,20 @@
                     <div class="panel panel-default">
                         <form class="well-lg" ng-submit="ctrl.submit()">
                             <div class="form-group">
-                                <label class="">Código</label>
-                                <input type="text" class="form-control input-sm"  ng-model="ctrl.estado.statecode" required>
+                                <label class="" style="font-family: Calibri;font-weight: bold">Código</label>
+                                <input type="text" maxlength="2" class="form-control input-sm"  ng-model="ctrl.estado.statecode" required>
                             </div>
                             <div class="form-group" ng-controller="PaisController as p_ctrl">
-                                <label for="criterio_busca">País</label>
+                                <label for="criterio_busca" style="font-family: Calibri;font-weight: bold">País</label>
                                 <select ng-model="ctrl.estado.pais.id" ng-options="pais.id as pais.description for pais in p_ctrl.paises" required></select>
                             </div>
                             <div class="form-group">
-                                <label for="criterio2">Nome</label>
-                                <input type="text" class="form-control input-sm" ng-model="ctrl.estado.description" required>
+                                <label for="criterio2" style="font-family: Calibri;font-weight: bold">Nome</label>
+                                <input type="text" maxlength="40" class="form-control input-sm" ng-model="ctrl.estado.description" required>
                             </div>
                             <div class="form-group">
-                                <label for="criterio2">Região</label>
-                                <input type="text" class="form-control input-sm" ng-model="ctrl.estado.stateregion" required>
+                                <label for="criterio2" style="font-family: Calibri;font-weight: bold">Região</label>
+                                <input type="text" maxlength="10" class="form-control input-sm" ng-model="ctrl.estado.stateregion" required>
                             </div>
                             <input type="submit"  value="{{!ctrl.estado.id ? 'Cadastrar' : 'Atualizar'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
                             <button type="button" ng-click="ctrl.reset()" class="btn btn-warning btn-sm" ng-disabled="myForm.$pristine">Limpar</button>
