--- a/partials/municipios/municipios.html
+++ b/partials/municipios/municipios.html
@@ -1,28 +1,35 @@
-<div ng-controller="MunicipioController as ctrl">
+<div class="container-fluid" ng-controller="MunicipioController as ctrl">
 <div class="panel panel-default well-lg">
-    <button type="submit" class="btn btn-success pull-right btn-sm" data-toggle="modal" data-target="#myModal" ng-click="ctrl.reset()" >Novo</button>
-    <h4>Cadastro do Municípios</h4>
+    <button type="submit" class="btn btn-success pull-right btn-sm" data-toggle="modal" data-target="#myModal" ng-click="ctrl.reset()" >
+        <span class="glyphicon glyphicon-plus">Novo</span>
+    </button>
+    <h2>Cadastro do Municípios</h2>
     <hr>
     <label class=""><b>Busca</b></label>
-    <input type="text" class="form-control input-sm" placeholder="Procure aqui o nome do Municipio..." ng-model="searchDescription">
+    <input type="text" class="form-control input-sm" placeholder="Procure aqui por nome ou código do Municipio..." ng-model="searchDescription">
 </div>
-<div class="panel panel-default">
+    <div class="panel panel-primary">
+        <div class="panel-heading" style="background-color: #2F75B5">Municípios</div>
     <table class="table table-striped table-bordered">
         <tr>
             <th style="max-width: 5%">#</th>
             <th>Nome</th>
             <th>Estado</th>
             <th>Código</th>
-            <th style="max-width: 10%">Ações</th>
+            <th style="width: 100px;">Ações</th>
         </tr>
         <tr ng-repeat="municipio in ctrl.municipios | filter:searchDescription">
             <td>{{municipio.id}}</td>
             <td>{{municipio.description}}</td>
-            <td>{{municipio.estado.id}}</td>
+            <td>{{municipio.estado.description}}</td>
             <td>{{municipio.stCityCode}}</td>
             <td>
-                <button type="button" ng-click="ctrl.edit(municipio.id)" class="btn btn-success custom-width btn-sm" data-toggle="modal" data-target="#myModal">Editar</button>
-                <button type="button" ng-click="ctrl.deleteMunicipio(municipio.id)" class="btn btn-danger btn-sm custom-width">Remover</button>
+                <button type="button" ng-click="ctrl.edit(municipio.id)" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">
+                    <span class="glyphicon glyphicon-pencil"></span>
+                </button>
+                <button type="button" ng-click="ctrl.deleteMunicipio(municipio.id)" class="btn btn-sm btn-danger">
+                    <span class="glyphicon glyphicon-trash"></span>
+                </button>
 
             </td>
         </tr>
@@ -41,16 +48,16 @@
                 <div class="panel panel-default">
                     <form class="well-lg" ng-submit="ctrl.submit()">
                         <div class="form-group">
-                            <label for="stCityCode" class="">Código</label>
-                            <input type="text" class="form-control input-sm"  ng-model="ctrl.municipio.stCityCode">
+                            <label for="stCityCode" class="" style="font-family: Calibri;font-weight: bold">Código</label>
+                            <input type="text" maxlength="5" class="form-control input-sm"  ng-model="ctrl.municipio.stCityCode">
                         </div>
                         <div class="form-group" ng-controller="EstadoController as e_ctrl">
-                            <label for="criterio_busca">Estado</label>
+                            <label for="criterio_busca" style="font-family: Calibri;font-weight: bold">Estado</label>
                             <select ng-model="ctrl.municipio.estado.id" ng-options="estado.id as estado.description for estado in e_ctrl.estados"></select>
                         </div>
                         <div class="form-group">
-                            <label for="criterio2">Nome do Municipio</label>
-                            <input type="text" class="form-control input-sm" ng-model="ctrl.municipio.description">
+                            <label for="criterio2" style="font-family: Calibri;font-weight: bold">Nome</label>
+                            <input type="text" maxlength="40" class="form-control input-sm" ng-model="ctrl.municipio.description">
                         </div>
                         <input type="submit"  value="{{!ctrl.municipio.id ? 'Cadastrar' : 'Atualizar'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
                         <button type="button" ng-click="ctrl.reset()" class="btn btn-warning btn-sm" ng-disabled="myForm.$pristine">Limpar</button>
@@ -65,3 +72,4 @@
         </div>
     </div>
 </div>
+    </div>
