--- a/partials/paises/paises.html
+++ b/partials/paises/paises.html
@@ -1,12 +1,15 @@
-<div ng-controller="PaisController as ctrl">
+<div class="container-fluid" ng-controller="PaisController as ctrl">
     <div class="panel panel-default well-lg">
-        <button type="submit" class="btn btn-success pull-right btn-sm" data-toggle="modal" data-target="#myModal" ng-click="ctrl.reset()" >Novo</button>
-        <h4>Cadastro de Países</h4>
+        <button type="submit" class="btn btn-success pull-right btn-sm" data-toggle="modal" data-target="#myModal" ng-click="ctrl.reset()" >
+            <span class="glyphicon glyphicon-plus">Novo</span>
+        </button>
+        <h2>Cadastro de Países</h2>
         <hr>
         <label class=""><b>Busca</b></label>
-        <input type="text" class="form-control input-sm" placeholder="Procure aqui o nome ou Código de País..." ng-model="searchDescription">
+        <input type="text" class="form-control ng-pristine ng-valid" placeholder="Procure aqui o nome ou Código de País..." ng-model="searchDescription">
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
+        <div class="panel-heading" style="background-color: #2F75B5">Países</div>
         <table class="table table-striped table-bordered">
             <tr>
                 <th style="max-width: 5%">#</th>
@@ -14,7 +17,7 @@
                 <th>Código de País</th>
                 <th>Moeda</th>
                 <th>Idioma</th>
-                <th style="max-width: 10%">Ações</th>
+                <th style="width: 100px">Ações</th>
             </tr>
             <tr ng-repeat="pais in ctrl.paises | filter:searchDescription">
                 <td>{{pais.id}}</td>
@@ -23,8 +26,12 @@
                 <td>{{pais.countrycurrency}}</td>
                 <td>{{pais.countrylanguage}}</td>
                 <td>
-                    <button type="button" ng-click="ctrl.edit(pais.id)" class="btn btn-success custom-width btn-sm" data-toggle="modal" data-target="#myModal">Editar</button>
-                    <button type="button" ng-click="ctrl.remove(pais.id)" class="btn btn-danger btn-sm custom-width">Apagar</button>
+                    <button type="button" ng-click="ctrl.edit(pais.id)" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">
+                        <span class="glyphicon glyphicon-pencil"></span>
+                    </button>
+                    <button type="button" ng-click="ctrl.remove(pais.id)" class="btn btn-sm btn-danger">
+                        <span class="glyphicon glyphicon-trash"></span>
+                        </button>
                 </td>
             </tr>
 
@@ -42,19 +49,19 @@
                     <div class="panel panel-default">
                         <form class="well-lg" ng-submit="ctrl.submit()">
                             <div class="form-group">
-                                <label class="">Código</label>
-                                <input type="text" class="form-control input-sm"  ng-model="ctrl.pais.countrycode" required >
+                                <label style="font-family: Calibri;font-weight: bold">Código</label>
+                                <input type="text" maxlength="3" class="form-control input-sm"  ng-model="ctrl.pais.countrycode" required >
                             </div>
                             <div class="form-group">
-                                <label class="">Moeda</label>
-                                <input type="text" class="form-control input-sm"  ng-model="ctrl.pais.countrycurrency" required >
+                                <label style="font-family: Calibri;font-weight: bold">Moeda</label>
+                                <input type="text" maxlength="3" class="form-control input-sm"  ng-model="ctrl.pais.countrycurrency" required >
                             </div>
                             <div class="form-group">
-                                <label >Idioma</label>
-                                <input type="text" class="form-control input-sm" ng-model="ctrl.pais.countrylanguage" required >
+                                <label style="font-family: Calibri;font-weight: bold">Idioma</label>
+                                <input type="text" maxlength="3" class="form-control input-sm" ng-model="ctrl.pais.countrylanguage" required >
                             </div>
                             <div class="form-group">
-                                <label>Nome</label>
+                                <label style="font-family: Calibri;font-weight: bold">Nome</label>
                                 <input type="text" class="form-control input-sm" ng-model="ctrl.pais.description" required>
                             </div>
                             <input type="submit"  value="{{!ctrl.pais.id ? 'Cadastrar' : 'Atualizar'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
