--- a/partials/municipios/municipios.html
+++ b/partials/municipios/municipios.html
@@ -6,7 +6,7 @@
     <h2>Cadastro do Municípios</h2>
     <hr>
     <label class=""><b>Busca</b></label>
-    <input type="text" class="form-control input-sm" placeholder="Procure aqui por nome ou código do Municipio..." ng-model="searchDescription">
+    <input type="text"  class="form-control input-sm" style="font-family: Calibri;font-weight: bold;text-transform: uppercase" placeholder="Procure aqui por nome ou código do Municipio..." ng-model="searchDescription">
 </div>
     <div class="panel panel-primary">
         <div class="panel-heading" style="background-color: #2F75B5">Municípios</div>
@@ -48,16 +48,16 @@
                 <div class="panel panel-default">
                     <form class="well-lg" ng-submit="ctrl.submit()">
                         <div class="form-group">
-                            <label for="stCityCode" class="" style="font-family: Calibri;font-weight: bold">Código</label>
-                            <input type="text" maxlength="5" class="form-control input-sm"  ng-model="ctrl.municipio.stCityCode">
+                            <label for="stCityCode" class="" style="font-family: Calibri;font-weight: bold;text-transform: uppercase">Código</label>
+                            <input style="font-family: Calibri;font-weight: bold;text-transform: uppercase" type="text" maxlength="5" class="form-control input-sm"  ng-model="ctrl.municipio.stCityCode">
                         </div>
                         <div class="form-group" ng-controller="EstadoController as e_ctrl">
-                            <label for="criterio_busca" style="font-family: Calibri;font-weight: bold">Estado</label>
-                            <select ng-model="ctrl.municipio.estado.id" ng-options="estado.id as estado.description for estado in e_ctrl.estados"></select>
+                            <label for="criterio_busca" style="font-family: Calibri;font-weight: bold;text-transform: uppercase">Estado</label>
+                            <select style="font-family: Calibri;font-weight: bold;text-transform: uppercase" ng-model="ctrl.municipio.estado.id" ng-options="estado.id as estado.description for estado in e_ctrl.estados"></select>
                         </div>
                         <div class="form-group">
-                            <label for="criterio2" style="font-family: Calibri;font-weight: bold">Nome</label>
-                            <input type="text" maxlength="40" class="form-control input-sm" ng-model="ctrl.municipio.description">
+                            <label for="criterio2" style="font-family: Calibri;font-weight: bold;text-transform: uppercase">Nome</label>
+                            <input style="font-family: Calibri;font-weight: bold;text-transform: uppercase" type="text" maxlength="40" class="form-control input-sm" ng-model="ctrl.municipio.description">
                         </div>
                         <input type="submit"  value="{{!ctrl.municipio.id ? 'Cadastrar' : 'Atualizar'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
                         <button type="button" ng-click="ctrl.reset()" class="btn btn-warning btn-sm" ng-disabled="myForm.$pristine">Limpar</button>
