--- a/partials/cargos/cadastrar.html
+++ b/partials/cargos/cadastrar.html
@@ -18,6 +18,16 @@
 
                 document.getElementById("div_simbologias").style.display = "none";
 			}
+
+            if(tipoCargo == 1) {
+
+                angular.element(document.getElementById('tipoCargo')).scope().getSimbologias();
+                document.getElementById("table_referencias").style.display="block";
+
+            }else{
+
+                document.getElementById("table_referencias").style.display = "none";
+            }
 		}
 
 
@@ -55,6 +65,7 @@
 									<div class="col-xs-3">
 										<label for="tipoCargo">Tipo de Cargo:</label>
 										<select id="tipoCargo" name="tipoCargo" class="form-control" onchange="habilitaSimbologia()">
+											<option value="0">Selecione...</option>
 											<option value="1">Efetivo</option>
 											<option value="2">Eletivo</option>
 											<option value="3">Temporário</option>
@@ -67,7 +78,7 @@
 									<div class="col-xs-3">
 
 										<label style="font-family: Calibri;
-                                		font-weight: bold;text-transform: uppercase">Quantidade</label>
+                                		font-weight: bold;text-transform: uppercase">Qtd. vagas</label>
 										<input style="font-family: Calibri;font-weight: bold;text-transform: uppercase"
 											   type="number" maxlength="40" class="form-control input-sm"
 											   id="quantidade"
@@ -75,6 +86,53 @@
 
 									</div>
 									<br>
+
+
+
+									<!--<select name="simbologias" ng-model="simbologiasId">
+										<option ng-repeat="item in simbologias" value="{{item.cdSimbologia}}">{{item.nomeclatura}}</option>
+									</select>-->
+
+								</div>
+
+								<div class="row">
+
+									<div class="col-xs-3">
+										<label for="escolaridade">Escolaridade:</label>
+										<select id="escolaridade" name="escolaridade" class="form-control">
+											<option value="Fundamental incompleto">Fundamental incompleto</option>
+											<option value="Fundamental completo">Fundamental completo</option>
+											<option value="Médio incompleto">Médio incompleto</option>
+											<option value="Médio completo">Médio completo</option>
+											<option value="Superior">Superior</option>
+											<option value="Outros">Outros</option>
+										</select>
+										<span class="help-block">&nbsp;</span>
+									</div>
+
+
+									<div class="col-xs-3">
+
+										<label style="font-family: Calibri;
+                                font-weight: bold;text-transform: uppercase">Carga Horária Semanal</label>
+										<input style="font-family: Calibri;font-weight: bold;text-transform: uppercase"
+											   type="number" maxlength="2" class="form-control input-sm"
+											   id="cargaHoraria"
+											   ng-model="ctrl.cargo.cargaHoraria" required ng-disabled="show">
+
+									</div>
+
+
+									<div class="col-xs-3">
+										<label for="grupoOcupacional">Grupos Ocupacionais:</label>
+										<select id="grupoOcupacional" name="grupoOcupacional" class="form-control">
+											<option value="1">ANS - Atividades de nível superior</option>
+											<option value="2">AAD - Atividades de apoio administrativo</option>
+											<option value="3">AAO - Atividades de apoio operacional</option>
+											<option value="4">Outros</option>
+										</select>
+										<span class="help-block">&nbsp;</span>
+									</div>
 
 									<div class="col-xs-3" id="div_simbologias" style="display: none">
 										<label for="simbologias">Simbologias:</label>
@@ -85,11 +143,108 @@
 										<span class="help-block">&nbsp;</span>
 									</div>
 
-									<!--<select name="simbologias" ng-model="simbologiasId">
-										<option ng-repeat="item in simbologias" value="{{item.cdSimbologia}}">{{item.nomeclatura}}</option>
-									</select>-->
 
 								</div>
+
+
+								<div class="row" id="table_referencias" style="display: none">
+
+									<table class="table table-bordered">
+										<thead>
+										<tr>
+								<th>Classe</th>
+								<th>Referência Min.</th>
+								<th>Referência Max.</th>
+								</tr>
+								</thead>
+								<tbody>
+								<tr>
+									<td>I</td>
+									<td><input style="font-family: Calibri;font-weight: bold;text-transform: uppercase"
+												   type="text" maxlength="40" class="form-control input-sm"
+												   id="classe1ReferenciaMin"
+												   ng-model="ctrl.cargo.classe1ReferenciaMin"  ng-disabled="show"></td>
+									<td><input style="font-family: Calibri;font-weight: bold;text-transform: uppercase"
+											   type="text" maxlength="40" class="form-control input-sm"
+											   id="classe1ReferenciaMax"
+											   ng-model="ctrl.cargo.classe1ReferenciaMax"  ng-disabled="show"></td>
+								</tr>
+								<tr>
+									<td>II</td>
+									<td><input style="font-family: Calibri;font-weight: bold;text-transform: uppercase"
+											   type="text" maxlength="40" class="form-control input-sm"
+											   id="classe2ReferenciaMin"
+											   ng-model="ctrl.cargo.classe2ReferenciaMin"  ng-disabled="show"></td>
+									<td><input style="font-family: Calibri;font-weight: bold;text-transform: uppercase"
+											   type="text" maxlength="40" class="form-control input-sm"
+											   id="classe2ReferenciaMax"
+											   ng-model="ctrl.cargo.classe2ReferenciaMax"  ng-disabled="show"></td>
+								</tr>
+								<tr>
+									<td>III</td>
+									<td><input style="font-family: Calibri;font-weight: bold;text-transform: uppercase"
+											   type="text" maxlength="40" class="form-control input-sm"
+											   id="classe3ReferenciaMin"
+											   ng-model="ctrl.cargo.classe3ReferenciaMin"  ng-disabled="show"></td>
+									<td><input style="font-family: Calibri;font-weight: bold;text-transform: uppercase"
+											   type="text" maxlength="40" class="form-control input-sm"
+											   id="classe3ReferenciaMax"
+											   ng-model="ctrl.cargo.classe3ReferenciaMax"  ng-disabled="show"></td>
+								</tr>
+								<tr>
+									<td>IV</td>
+									<td><input style="font-family: Calibri;font-weight: bold;text-transform: uppercase"
+											   type="text" maxlength="40" class="form-control input-sm"
+											   id="classe4ReferenciaMin"
+											   ng-model="ctrl.cargo.classe4ReferenciaMin"  ng-disabled="show"></td>
+									<td><input style="font-family: Calibri;font-weight: bold;text-transform: uppercase"
+											   type="text" maxlength="40" class="form-control input-sm"
+											   id="classe4ReferenciaMax"
+											   ng-model="ctrl.cargo.classe4ReferenciaMax"  ng-disabled="show"></td>
+								</tr>
+								<tr>
+									<td>V</td>
+									<td><input style="font-family: Calibri;font-weight: bold;text-transform: uppercase"
+											   type="text" maxlength="40" class="form-control input-sm"
+											   id="classe5ReferenciaMin"
+											   ng-model="ctrl.cargo.classe5ReferenciaMin"  ng-disabled="show"></td>
+									<td><input style="font-family: Calibri;font-weight: bold;text-transform: uppercase"
+											   type="text" maxlength="40" class="form-control input-sm"
+											   id="classe5ReferenciaMax"
+											   ng-model="ctrl.cargo.classe5ReferenciaMax"  ng-disabled="show"></td>
+								</tr>
+								</tbody>
+								</table>
+
+								</div>
+
+								<div class="row">
+
+
+									<div class="col-xs-5">
+
+										<label style="font-family: Calibri;
+                                			font-weight: bold;text-transform: uppercase">Atribuições do cargo</label>
+										<textarea class="form-control" rows="6" style="font-family: Calibri;font-weight: bold;text-transform: uppercase"
+											   type="text" maxlength="40" class="form-control input-sm"
+											   id="atribuicoesCargo"
+											   ng-model="ctrl.cargo.atribuicoesCargo" required ng-disabled="show"/>
+
+									</div>
+
+									<div class="col-xs-5">
+
+										<label style="font-family: Calibri;
+                                			font-weight: bold;text-transform: uppercase">Requisitos de provimento</label>
+										<textarea class="form-control" rows="6" style="font-family: Calibri;font-weight: bold;text-transform: uppercase"
+												  type="text" maxlength="40" class="form-control input-sm"
+												  id="requisitosProvimento"
+												  ng-model="ctrl.cargo.requisitosProvimento" required ng-disabled="show"/>
+
+									</div>
+
+								</div>
+
 								<hr>
 								<div align="right" class="footer">
 									<input type="submit"  ng-disabled="show" value="{{!ctrl.cargo.cdCargo ? 'Cadastrar' : 'Atualizar'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
