--- a/partials/cargos/cadastrar.html
+++ b/partials/cargos/cadastrar.html
@@ -31,8 +31,14 @@
 		}
 
 
+        $(document).ready(function(){
+            $("#salarioBase").maskMoney({showSymbol:true, symbol:"R$", decimal:",", thousands:"."});
+
+        });
+
 
 	</script>
+
 
 </head>
 <div ng-app="myApp" ng-controller="CargoController as ctrl">
@@ -51,7 +57,7 @@
 							<form role="form" ng-submit="ctrl.submit()">
 								<div class="row">
 
-									<div class="col-xs-6">
+									<div class="col-xs-4">
 
 										<label style="font-family: Calibri;
                                 font-weight: bold;text-transform: uppercase">Nome</label>
@@ -59,6 +65,15 @@
 											   type="text" maxlength="40" class="form-control input-sm"
 											   id="nome"
 											   ng-model="ctrl.cargo.nome" required ng-disabled="show">
+
+									</div>
+
+									<div class="col-xs-2">
+										<label style="font-family: Calibri;
+                                				font-weight: bold;text-transform: uppercase">Salário Base</label>
+										<input id="salarioBase" class="form-control" type="text" placeholder="" required
+											   ng-disabled="show" title="Salario Base. Ex: 8899999999 "
+											   bs-tooltip ng-model="ctrl.cargo.salarioBase" >
 
 									</div>
 
